--- a/src/styles/one-pager.css
+++ b/src/styles/one-pager.css
@@ -102,7 +102,7 @@ h2:first-of-type {
 		}
 
 		& h1 {
-			margin-top: 32vh;
+			margin-top: 29.5vh;
 			font-size: 3.25em;
 		}
 
@@ -121,21 +121,20 @@ h2:first-of-type {
 	}
 
 	.cover-bg {
-		--v-margin: 0in;
-		--h-margin: 1in;
 		display: block;
 		position: absolute;
-		top: var(--v-margin);
-		left: var(--h-margin);
-		width: calc(100% - var(--h-margin) * 2);
-		height: calc(100% - var(--v-margin) * 2);
+		object-fit: contain;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
 		z-index: -1;
 		opacity: 0.75;
 	}
 
-	h2 {
+	h2, h2:first-of-type {
 		margin-top: 0;
-		font-size: 2em;
+		font-size: 1.9em;
 		margin-bottom: 35px;
 		text-align: center;
 		page-break-before: always;
@@ -144,8 +143,9 @@ h2:first-of-type {
 	}
 
 	h3 {
-		font-size: 1.6em;
+		font-size: 1.5em;
 		margin-bottom: 20px;
+		margin-top: 40px;
 	}
 
 	h4 {
@@ -157,6 +157,6 @@ h2:first-of-type {
 		/* All widths are calculated based on first-page margins, so our content gets
 		 * cut off if we do layout with normal @page rules. Instead, we use 0in margin
 		 * in the @page and add in our 1.2in horizontal margin here. */
-		max-width: calc(100% - 2.4in);
+		max-width: calc(100% - 1.6in);
 	}
 }
